# medication-agent

./: .gitignore  README.md  clean_db.py  init_db.py  main.py  medgraph.db  migrate_db.py  pyproject.toml  requirements.txt  seed_db.py
agent/: __init__.py  app.py  graph.py
agent/schema/: checker.py  chemical.py  classifier.py  internet.py  media.py  medicine.py  precription.py
agent/tools/: checker.py  chemical.py  classifier.py  internet.py  media.py  medicine.py  ocr.py  prescription.py
backend-node/: authResolvers.js  db.js  fix_resolvers.js  package-lock.json  package.json  resolvers.js  schema.js  server.js  test_db.js  test_resolvers.js
db/: db.py  models.py
docs/: MedGraph_AI_Specification.docx  specification_extracted.txt
frontend/: fix_blue.py  index.html  package-lock.json  package.json  tailwind.config.cjs  test-output.css
frontend/src/: App.css  App.jsx  index.css  main.jsx  output.css
reminder-service/: go.mod  main.go  main_test.go
stitch_hybrid_aesthetic_interface_design/: medgraph_ai_specification.txt_2.txt
stitch_hybrid_aesthetic_interface_design/atorvastatin_intelligence_profile_1/: code.html
stitch_hybrid_aesthetic_interface_design/atorvastatin_intelligence_profile_2/: code.html
stitch_hybrid_aesthetic_interface_design/atorvastatin_profile/: code.html
stitch_hybrid_aesthetic_interface_design/clinical_profile_settings/: code.html
stitch_hybrid_aesthetic_interface_design/clinical_utility/: DESIGN.md
stitch_hybrid_aesthetic_interface_design/clinician_oversight_portal/: code.html
tests/: test_agent.py  test_graphql.js
(+55 files in other folders)
