[project]
name = "med"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google>=0.1.1",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]
